--- a/.github/workflows/update-rock.yaml
+++ b/.github/workflows/update-rock.yaml
@@ -1,9 +1,9 @@
 name: Update ROCK
 
 on:
-  workflow_dispatch:
-    schedule:
-      - cron: '0 0,4,8,12,16,20 * * *'
+  workflow_dispatch: {}
+  schedule:
+    - cron: '0 0,4,8,12,16,20 * * *'
 
 jobs:
   build:
