pass secrets to build-rock

--- a/.github/workflows/build-rock.yaml
+++ b/.github/workflows/build-rock.yaml
@@ -9,5 +9,6 @@ on:
 jobs:
   build:
     uses: canonical/observability/.github/workflows/build-rock.yaml@main
+    secrets: inherit
     with:
       rock-name: loki
