--- a/2.9.2/rockcraft.yaml
+++ b/2.9.2/rockcraft.yaml
@@ -41,3 +41,11 @@ parts:
       loki-local-config.yaml: etc/loki/loki-local-config.yaml
     stage:
       - etc/loki/loki-local-config.yaml
+  deb-security-manifest:
+    plugin: nil
+    after:
+      - loki
+    override-prime: |
+      set -x
+      mkdir -p $CRAFT_PRIME/usr/share/rocks/
+      (echo "# os-release" && cat /etc/os-release && echo "# dpkg-query" && dpkg-query --admindir=$CRAFT_PRIME/var/lib/dpkg/ -f '${db:Status-Abbrev},${binary:Package},${Version},${source:Package},${Source:Version}\n' -W) > $CRAFT_PRIME/usr/share/rocks/dpkg.query
