--- a/3.1.1/rockcraft.yaml
+++ b/3.1.1/rockcraft.yaml
@@ -2,7 +2,7 @@ name: loki
 summary: Loki in a ROCK.
 description: "Loki is a horizontally scalable, highly available, multi-tenant log aggregation system inspired by Prometheus."
 version: "3.1.1"
-base: ubuntu:22.04
+base: ubuntu@24.04
 license: AGPL-3.0
 services:
   loki:
