--- a/2.9.15/rockcraft.yaml
+++ b/2.9.15/rockcraft.yaml
@@ -2,7 +2,7 @@ name: loki
 summary: Loki in a ROCK.
 description: "Loki is a horizontally scalable, highly available, multi-tenant log aggregation system inspired by Prometheus."
 version: "2.9.15"
-base: ubuntu:22.04
+base: ubuntu@24.04
 license: AGPL-3.0
 services:
   loki:
@@ -18,7 +18,7 @@ parts:
     source-type: git
     source-tag: "v2.9.15"
     build-snaps:
-      - go/1.20/stable
+      - go/1.23/stable
     build-environment:
       - BUILD_IN_CONTAINER: "false"
     build-packages:
