Update Go version from 1.24 to 1.25
Signed-off-by: Leon <82407168+sed-i@users.noreply.github.com>

--- a/3.6.5/rockcraft.yaml
+++ b/3.6.5/rockcraft.yaml
@@ -18,7 +18,7 @@ parts:
     source-type: git
     source-tag: "v3.6.5"
     build-snaps:
-      - go/1.24/stable
+      - go/1.25/candidate
     build-environment:
       - BUILD_IN_CONTAINER: "false"
     build-packages:
